--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@ body {
          border: 1px solid black;
          background-color:pink ;
          margin: 1%;
+         padding-bottom: 10px;
     }
     .col-lg-1 {
         width: 8.33%;
@@ -114,8 +115,9 @@ body {
      .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
          float: left;
          border: 0.5px solid black;
-         background-color: gray; 
+         background-color: pink; 
          margin: 0.4%;
+         padding-bottom: 10px;
     }
     #d {
         width: 100%;
@@ -124,7 +126,7 @@ body {
     .col-md-6{
         float: left;
          border: 0.5px solid black;
-         background-color: gray; 
+         background-color: pink; 
          margin-right: 2.5%;
     }
     .col-md-1 {
@@ -173,8 +175,9 @@ body {
      .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
          float: left;
          border: 1px solid black; 
-         background-color: gray;   
-         margin: 1%;  
+         background-color: pink;   
+         margin: 1%; 
+         padding-bottom: 10px;
      }
     .col-sm-1 {
         width: 8.33%;
