--- a/mod5_solution/css/styles.css
+++ b/mod5_solution/css/styles.css
@@ -232,9 +232,11 @@ h3.menu-item-title {
 
 /********** Large devices only **********/
 @media (min-width: 1200px) {
-  .container .jumbotron {
+  .jumbotron {
     background: url('../images/jumbotron_1200.jpg') no-repeat;
     height: 675px;
+    box-shadow: 0 0 50px #3F0C1F;
+    border:2px solid #3F0C1F;
   }
 }
 
@@ -325,9 +327,11 @@ h3.menu-item-title {
   /* End Footer */
 
   /* Home Page */
-  .container .jumbotron {
-    margin-top: 30px;
-    padding: 0;
+ .jumbotron {
+    background: url('../images/jumbotron_992.jpg') no-repeat;
+    height: 558px;
+    box-shadow: 0 0 50px #3F0C1F;
+    border: 2px solid #3F0C1F
   }
   #menu-tile, #specials-tile {
     width: 360px;
